DDBB connection Class.

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -8,8 +8,8 @@ appender.1.name = MAIN
 appender.1.fileName = logs/main.log
 
 appender.2.type = File
-appender.2.name = DEBUG_LOG
-appender.2.fileName = logs/debug.log
+appender.2.name = ERROR_LOG
+appender.2.fileName = logs/errors.log
 appender.2.layout.type = PatternLayout
 appender.2.layout.pattern = %d [%t] %p %c - %m%n
 
